# yaml_editor

./: .gitignore  Cargo.toml  bundle.sh  example.yaml  json.json
resources/: asor1-nvmdo.icns  icon.icns
src/: main.rs  render_json.rs  render_toml.rs  render_yaml.rs
