[dependencies]
directories = "6.0.0"
eframe = "0.31.1"
libc = "0.2.172"
notify = "8.0.0"
rfd = "0.15.3"
serde_json = "1.0.140"
yaml-rust = "0.4.5"
toml = "0.8.22"

[dependencies.tokio]
features = [
    "full",
    "sync",
]
version = "1.45.1"

[package]
authors = ["Barnaby van Straaten"]
edition = "2021"
name = "yaml_viewer"
version = "0.1.0"

[package.metadata.bundle]
category = "DeveloperTool"
icon = ["resources/icon.icns"]
identifier = "com.barnaby.yamlviewer"
long_description = """
YAML Viewer is a GUI application for exploring and editing YAML files interactively.
Designed initially for managing configurations in quantum control experiments.
"""
name = "YAML Viewer"
resources = ["resources/"]
short_description = "A collapsible + raw YAML viewer for quantum experiments"
